lib/igt_chamelium: Retry DP FSM on Failure

We have a thread called chamelium_fsm_mon which monitors HPD events
triggered by chamelium, Unfortunately not always the HPD event arrives
in a fixed interval (mostly does), Quick fix to this is to retry.

v2: Remove redundant assert (Bhanu)
v3: Cleanup (Petri)

Fixes :- https://gitlab.freedesktop.org/drm/intel/-/issues/262
Cc: Petri Latvala <petri.latvala@intel.com>
Cc: Modem Bhanuprakash <bhanuprakash.modem@intel.com>
Signed-off-by: Kunal Joshi <kunal1.joshi@intel.com>
Reviewed-by: Petri Latvala <petri.latvala@intel.com>